--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -1,32 +1,32 @@
 /* 반려견 등록페이지 */
 /* ********************************************************* */
 /* petAddForm */
-#petAddForm h1 {
-    margin: 30px 0 50px 200px;
-    font-size: 30px;
-}
-
-
-#petAddForm .container form {
-    margin: 20px auto;
-    width: 1000px;
-    /* border: 1px solid black; */
-
-}
-
 #petAddForm {
     width: 1400px;
     height: 1900px;
     margin: 0 auto;
 }
 
+#petAddForm h1 {
+    margin: 20px 20px 0 110px;
+    width: 1300px;
+    /* border-bottom: 1px solid #a7a4a4; */
+    padding-bottom: 20px;
+    font-size: 30px;
+}
+
+
 #petAddForm .container form {
+    width: 1300px;
+    border-top: 1px solid #a7a4a4;
     display: flex;
+    margin-left: 100px;
+    padding: 50px;
 }
 
 
 #petAddForm .container form div {
-    width: 450px;
+    width: 600px;
 }
 
 #petAddForm .container form label:first-child {
@@ -52,9 +52,9 @@
 }
 
 #petAddForm .filebox label {
-    margin-left: 330px;
+    margin-left: 430px;
     display: inline-block;
-    padding: .5em .75em;
+    padding: 10px;
     color: white;
     font-size: inherit;
     line-height: normal;
@@ -72,7 +72,6 @@
     font-family: inherit;
     line-height: normal;
     vertical-align: middle;
-    background-color: #f5f5f5;
     border: 1px solid #ebebeb;
     border-bottom-color: #e2e2e2;
     border-radius: .25em;
@@ -83,13 +82,12 @@
 }
 
 #petAddForm #preview-image {
-    width: 400px;
-    height: 500px;
+    width: 500px;
+    height: 600px;
 }
 
 #petAddForm .container .detailBox {
-    margin-top: -30px;
-    margin-left: 50px;
+    margin: -20px 0 0 180px;
 }
 
 #petAddForm .container .detail {
@@ -197,19 +195,19 @@ datalist {
 }
 
 .insertBtnBox {
-    margin-left: 660px;
+    margin-left: 500px;
     /* text-align: center; */
 }
 
 #petAddForm .container .insertBtn {
-    width: 400px;
-    height: 50px;
+    width: 500px;
+    height: 60px;
     border: 1px solid #236C3F;
     border-radius: 5px;
     background-color: white;
     color: #236C3F;
     font-weight: bolder;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 #petAddForm button:hover {
@@ -235,15 +233,17 @@ datalist {
 
 
 #reviewAddForm h1 {
-    margin: 30px 0 50px 400px;
+    margin: 20px 20px 0 110px;
     font-size: 30px;
-    text-align: left;
+    padding-bottom: 20px;
 }
 
 
 #reviewAddForm .container form {
-    width: 1000px;
-    margin-left: 400px;
+    width: 1300px;
+    margin-left: 100px;
+    border-top: 1px solid #a7a4a4;
+    padding: 50px;
 }
 
 #reviewAddForm h2 {
@@ -271,7 +271,7 @@ datalist {
 #reviewAddForm .reviewWrite textarea {
     width: 700px;
     height: 300px;
-    padding: 10px;
+    padding: 15px;
     resize: none;
     border-radius: 20px;
 }
@@ -281,7 +281,7 @@ datalist {
 }
 
 #reviewAddForm .reviewWrite .add_area {
-    margin-left: 300px;
+    margin-left: 130px;
     margin-bottom: 80px;
 }
 
@@ -338,24 +338,22 @@ datalist {
 
 /* 사진첨부 미리보기 */
 #reviewAddForm .reviewPhoto .photoBox {
-    width: 650px;
+    width: 1000px;
     display: flex;
     justify-content: space-between;
 }
 
 #reviewAddForm .reviewPhoto #photoBox2 {
-    width: 200px;
-    height: 200px;
+    width: 230px;
+    height: 230px;
     border: 1px solid #a7a4a4;
     margin-top: 5px;
     margin-bottom: 10px;
 }
 
-
 #reviewAddForm .pBox2 {
     color: gray;
     font-size: 14px;
-    margin-bottom: 50px;
 }
 
 #reviewAddForm .reviewPhoto .input-file-button {
@@ -368,7 +366,6 @@ datalist {
 }
 
 #reviewAddForm .submitBtn {
-    margin-left: 50px;
     text-align: center;
 }
 
@@ -381,6 +378,7 @@ datalist {
     border-radius: 20px;
     color: white;
     font-size: 18px;
+    cursor: pointer;
 }
 
 
@@ -427,7 +425,7 @@ datalist {
     border-radius: 12px;
 }
 
-#myDiary .dateLook{
+#myDiary .dateLook {
     border-top: 1px solid #a7a4a4;
     margin: 20px 0 40px 0;
     font-size: 25px;
@@ -548,11 +546,6 @@ datalist {
     margin-bottom: 15px;
 }
 
-#reservationForm .reservationBox {
-    width: 1100px;
-    /* background-color: pink; */
-    margin: 0 auto;
-}
 
 
 #reservationForm form h2 {
@@ -561,10 +554,10 @@ datalist {
 }
 
 #reservationForm .choiceBox {
-    margin: 50px 0 0 50px;
+    margin: 50px 0 100px 50px;
     display: flex;
     /* background-color: red; */
-    /* border-bottom: 1px solid #a7a4a4; */
+    border-bottom: 1px solid #a7a4a4;
     justify-content: space-between;
 }
 
@@ -599,49 +592,273 @@ datalist {
 
 
 
-#reservationForm .petKgChoice {
+
+
+
+
+
+
+#reservationForm .reservationBox {
+    width: 1000px;
+    /* background-color: pink; */
+    margin: 0 auto;
+    padding-left: 200px;
+}
+
+
+#reservationForm .reservationBox .petChoice {
+    padding: 30px 0 30px 0;
+}
+
+#reservationForm .reservationBox .petChoice span {
+    padding-right: 100px;
+}
+
+#reservationForm .reservationBox .petChoice input {
+    margin: 0 50px 0 10px;
+}
+
+
+
+
+#reservationForm .reservationBox .petKg {
+    display: flex;
+    padding: 30px 0 30px 0;
+}
+
+#reservationForm .reservationBox .petKg input {
+    margin-left: 150px;
+    margin-right: 10px;
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #a7a4a4;
+    border-radius: 10px;
+}
+
+#reservationForm .reservationBox .character {
+    padding: 30px 0 30px 0;
+}
+
+#reservationForm .reservationBox .character label {
+    padding-right: 50px;
+    margin-bottom: 20px;
+    display: block;
+}
+
+#reservationForm .reservationBox .character button {
+    background-color: white;
+    border: 1px solid #a7a4a4;
+    margin-right: 10px;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 10px;
+}
+
+#reservationForm .reservationBox .character button:hover {
+    background-color: #236C3F;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+#reservationForm .reservationBox .character .biteRange {
     display: flex;
 }
 
+#reservationForm .reservationBox .character .biteRange2 {
+    margin-top: 20px;
+}
+
+
+#reservationForm .reservationBox .character .bite label:first-child {
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+#reservationForm .reservationBox .character .bite input,
+datalist {
+    width: 200px;
+    accent-color: #236C3F;
+}
+
+#reservationForm .reservationBox .character .bite .pbox {
+    display: flex;
+    margin-left: 61px;
+}
+
+#reservationForm .reservationBox .character .bite p {
+    width: 40px;
+    margin-top: -14px;
+    font-size: 16px;
+}
+
+#reservationForm .reservationBox .character .bite p:first-child {
+    margin-left: 108px;
+}
+
+#reservationForm .reservationBox .character .bite p:nth-child(2) {
+    margin-left: 52px;
+}
+
+#reservationForm .reservationBox .character .bite p:nth-child(3) {
+    margin-left: 52px;
+}
+
+#reservationForm .reservationBox .character button {
+    width: 150px;
+    margin-right: 5px;
+}
+
+
+#reservationForm .reservationBox .character textarea {
+    margin: 20px 0 30px 0;
+    width: 610px;
+    height: 250px;
+    padding: 5px;
+    border: 1px solid #a7a4a4;
+    border-radius: 5px;
+    text-align: start;
+    resize: none;
+    outline: #236C3F;
+    font-size: 16px;
+}
+
+
+
+
+#reservationForm .reservationBox .point {
+    padding: 30px 0 30px 0;
+}
+
+#reservationForm .reservationBox .point label {
+    padding-right: 170px;
+}
+
+#reservationForm .reservationBox .point input {
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #a7a4a4;
+    border-radius: 10px;
+}
+#reservationForm .reservationBox .point button{
+    width: 80px;
+    padding: 10px;
+    border: 1px solid #a7a4a4;
+    border-radius: 10px;
+    margin-left: 5px;
+}
+#reservationForm .reservationBox .point p{
+    width: 620px;
+    font-size: 16px;
+    color: #a7a4a4;
+    text-align: end;
+    padding-top: 5px;
+}
+#reservationForm .reservationBox .cal{
+    margin-bottom: 50px;
+}
+#reservationForm .reservationBox .cal p{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 620px;
+    text-align: center;
+    font-weight: bold;
+    /* color: red; */
+}
+#reservationForm .reservationBox .cal button{
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #a7a4a4;
+    border-radius: 10px;
+    margin-left: 5px;
+    cursor: pointer;
+
+}
+
+
+
+
+
 #reservationForm .price {
-    width: 720px;
-    /* background-color: red; */
+    width: 650px;
     height: 600px;
+}
+#reservationForm .price .expectPrice{
+    text-align: center;
+
+    margin: 30px;
+    font-size: 25px;
+    
+}
+#reservationForm .price span{
+    padding-right: 120px;
+}
+#reservationForm .price label{
+    margin-right: 10px;
+}
+#reservationForm .price input{
+    margin-right: 30px;
 }
 
 #reservationForm .price table {
     border: none;
-    font-size: 16px;
-}
-
-#reservationForm .price table th {
-    /* background-color: red; */
-    width: 40px;
-}
-
-#reservationForm .price table button {
-    padding: 15px;
-    margin: 5px;
-    width: 90px;
-    background-color: white;
-    border: 1px solid #236C3F;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
+    font-size: 18px;
+    text-align: center;
+    border-spacing: 0px;
+    margin-top: 30px;
 }
 
 #reservationForm .price table td:hover {
-    background-color: red;
+    background-color: #236C3F;
+    color: white;
     cursor: pointer;
 }
 
-/* #reservationForm .price table button:active,
-#reservationForm .price table button:hover {
-    background-color: #236C3F;
-    color: white;
-} */
+#reservationForm .price table th{
+    width: 102px;
+    height: 50px;
+    font-size: 16px;
+}
+
+
+#reservationForm .price table tr:first-child{
+    background-color: #e2e2e2;
+}
+
+
+#reservationForm .price table td,th{
+    border: 1px solid black;
+
+}
+
+#reservationForm .reservationBox .notice{
+    display: flex;
+}
+
+#reservationForm .reservationBox .notice #notice{
+    width: 400px;
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+
 
 #reservationForm .signBox .sign {
     width: 625px;
     height: 200px;
+}
+
+
+#reservationForm .subBtn button {
+    padding: 10px;
+    background-color: #236C3F;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    width: 300px;
+    font-size: 20px;
+    cursor: pointer;
+
+
 }
