--- a/src/assets/css/manager/totalsales.css
+++ b/src/assets/css/manager/totalsales.css
@@ -30,19 +30,25 @@
 /* 엑셀 표 스타일 */
 .sales-table {
     width: 100%; /* 너비 100%로 설정 */
-    border-collapse: collapse; /* 테두리가 서로 겹치도록 설정 */
+    height: 200px;
+    border-collapse: collapse;  /*테두리가 서로 겹치도록 설정 */
 }
 
 .sales-table th,
 .sales-table td {
+    height: 50px;
     border: 1px solid #ddd; /* 테두리 설정 */
-    padding: 13px; /* 내부 여백 */
-    font-size: 10px; /* 글꼴 크기 설정 */
+    padding: 10px; /* 내부 여백 */
+}
+
+.sales-table td {
+    font-size: 12px; /* 글꼴 크기 설정 */
 }
 
 .sales-table th {
     background-color: #f2f2f2; /* 배경색 설정 */
     font-weight: bold; /* 굵은 글꼴 설정 */
+    font-size: 14px; /* 글꼴 크기 설정 */
 }
 
 /* Total Sales 스타일 */
