--- a/src/assets/css/headerFooter/mheader.css
+++ b/src/assets/css/headerFooter/mheader.css
@@ -78,7 +78,6 @@
 .mheader .mheaderWrap .mheaderRight{
     display: flex;
 }
-.mheader .mheaderWrap .mheaderRight p{}
 
 .mheader .mheaderWrap .mheaderRight p::after{
     content: '|';
@@ -94,4 +93,8 @@
 
 .mheader .mheaderWrap .mheaderRight a img{
     width: 20px;
+    margin-right: 10px;
+}
+.mheader .mheaderWrap .mheaderRight a:last-child img{
+    margin-right: 0;
 }
