--- a/src/assets/css/manager/diary.css
+++ b/src/assets/css/manager/diary.css
@@ -7,9 +7,10 @@
 
 /* 일지 컨테이너 */
 .diary-container {
+   
     display: flex; /* 요소들을 가로로 나란히 배치 */
     justify-content: space-between; /* 요소들 사이의 간격을 최대한 늘려서 두 요소를 양쪽에 배치 */
-    width: 1500px; /* 컨테이너 너비 */
+    width: 1400px; /* 컨테이너 너비 */
     margin: 30px auto; /* 페이지 중앙 정렬 */
     padding: 20px; /* 안쪽 여백 */
     background-color: #f0f0f0; /* 배경색 */
@@ -20,6 +21,7 @@
 /* 왼쪽 박스, 오른쪽 박스 */
 .diary-left-box,
 .diary-right-box {
+    border: 1px solid #ccc; /* 테두리 설정 */
     width: 48%; /* 박스의 너비 */
     padding: 20px; /* 안쪽 여백 */
     background-color: #ffffff; /* 박스 배경색 */
@@ -81,7 +83,7 @@
     padding: 10px; /* 안쪽 여백 */
     border: none; /* 테두리 없음 */
     border-radius: 20px; /* 둥근 테두리 */
-    background-color: #ffd700; /* 배경색 */
+    background-color: #237140; /* 배경색 */
     color: white; /* 글자색 */
     font: bolder;
     font-size: 1.2em; /* 폰트 크기 */
@@ -93,7 +95,7 @@
 .diary-save-button:hover,
 .diary-edit-button:hover,
 .diary-send-button:hover {
-    background-color: #ffd700; /* 배경색 변경 */
+    background-color: #1d5e35; /* 배경색 변경 */
 }
 
 /* 취소 버튼 디자인 */
