--- a/src/assets/css/manager/schedule.css
+++ b/src/assets/css/manager/schedule.css
@@ -1,8 +1,8 @@
 .calendar-container {
     margin: 20px auto;
-    max-width: 1500px; /* 더 작은 사이즈로 변경 */
+    max-width: 1400px; /* 더 작은 사이즈로 변경 */
     padding: 20px;
-    border: 3px solid hsl(60, 100%, 70%); /* 연한 노란색으로 변경 */
+    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
     border-radius: 20px; /* 더 둥근 모양으로 변경 */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 약간의 그림자 추가 */
     background-color: #fff; /* 배경색을 흰색으로 변경 */
@@ -18,7 +18,7 @@
 
 /* FullCalendar의 이벤트 요소 스타일링 */
 .fc-event {
-    background-color: #ffd700; /* 이벤트의 배경색을 노란색으로 변경 */
+    background-color: #f8a247; /* 이벤트의 배경색을 노란색으로 변경 */
     border: none; /* 테두리 제거 */
     border-radius: 5px; /* 둥근 모양으로 변경 */
     padding: 4px 8px; /* 내부 여백 조정 */
@@ -33,7 +33,7 @@
 
 /* FullCalendar의 오늘 날짜 스타일링 */
 .fc-day-today {
-    background-color: #ffd700; /* 오늘 날짜의 배경색을 노란색으로 변경 */
+    background-color: #f8a247; /* 오늘 날짜의 배경색을 노란색으로 변경 */
     /* border-radius: 20%; 둥근 모양으로 변경하여 강아지 모양으로 만듭니다. */
     color: #fff; /* 텍스트 색상을 흰색으로 변경 */
     font-weight: bold; /* 텍스트의 굵기를 강조 */
