ㅇㅅ 로고 넘침 해결

--- a/src/assets/css/headerFooter/mheader.css
+++ b/src/assets/css/headerFooter/mheader.css
@@ -39,6 +39,7 @@
     display: flex;
     align-items: center;
     margin-right: 30px;
+    overflow: hidden;
 }
 .mheader .mheaderWrap .mheaderLeft .mlogo a img{
     width: 150px;
