--- a/src/assets/css/manager/totalsales.css
+++ b/src/assets/css/manager/totalsales.css
@@ -14,7 +14,8 @@
     margin-bottom: 20px; /* 아래쪽 여백 */
     width: 48%; /* 너비 설정 */
     padding: 40px; /* 내부 여백 */
-    border: 1px solid #ccc; /* 테두리 설정 */
+    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
+    /* border: 1px solid #ccc; 테두리 설정 */
     border-radius: 20px; /* 테두리 둥글게 설정 */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
     display: flex; /* Flexbox 레이아웃 적용 */
