--- a/src/assets/css/manager/diary.css
+++ b/src/assets/css/manager/diary.css
@@ -7,13 +7,13 @@
 
 /* 일지 컨테이너 */
 .diary-container {
-   
+    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
     display: flex; /* 요소들을 가로로 나란히 배치 */
-    justify-content: space-between; /* 요소들 사이의 간격을 최대한 늘려서 두 요소를 양쪽에 배치 */
+    /*justify-content: space-between;*/ /* 요소들 사이의 간격을 최대한 늘려서 두 요소를 양쪽에 배치 */
     width: 1400px; /* 컨테이너 너비 */
     margin: 30px auto; /* 페이지 중앙 정렬 */
     padding: 20px; /* 안쪽 여백 */
-    background-color: #f0f0f0; /* 배경색 */
+    background-color: #ffffff; /* 배경색 */
     border-radius: 10px; /* 테두리 반경 */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
 }
@@ -21,7 +21,9 @@
 /* 왼쪽 박스, 오른쪽 박스 */
 .diary-left-box,
 .diary-right-box {
-    border: 1px solid #ccc; /* 테두리 설정 */
+    margin: 10px; /* 페이지 중앙 정렬 */
+    border: 2px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
+    /* border: 1px solid #ccc; 테두리 설정 */
     width: 48%; /* 박스의 너비 */
     padding: 20px; /* 안쪽 여백 */
     background-color: #ffffff; /* 박스 배경색 */
@@ -48,7 +50,8 @@
     padding: 10px; /* 안쪽 여백 */
     margin-top: 5px; /* 위 여백 */
     margin-bottom: 20px; /* 아래 여백 */
-    border: 1px solid #cccccc; /* 테두리 스타일 */
+    /* border: 1px solid #cccccc; 테두리 스타일 */
+    border: 2px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
     border-radius: 5px; /* 테두리 반경 */
     box-sizing: border-box; /* 너비와 높이에 패딩과 테두리를 포함 */
 }
@@ -110,6 +113,7 @@
 
 /* 모달창 */
 .diary-modal {
+
     text-align: center; /* 텍스트 가운데 정렬 */
     position: fixed; /* 위치 고정 */
     z-index: 1; /* 층위 설정 */
@@ -123,6 +127,7 @@
 
 /* 모달창 내용 */
 .diary-modal-content {
+    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
     background-color: #fefefe; /* 배경색 */
     margin: 5% auto; /* 가운데 정렬 */
     padding: 20px; /* 안쪽 여백 */
