--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -515,32 +515,32 @@ datalist {
 #reservationForm {
     width: 1200px;
     margin: 0px auto;
-    font-size: 20px;
 }
 
 #reservationForm .managerInfor {
     display: flex;
-    margin-bottom: 15px;
     padding: 15px;
     border: 1px solid #a7a4a4;
     border-radius: 10px;
+    width: 1200px;
+    margin: 0 0 0 40px;
 }
 
 #reservationForm .managerInfor .managerInfor2 {
     margin-left: 50px;
+    border-left: 1px dotted #a7a4a4;
+    padding: 10px 0 0 40px;
 }
 
 #reservationForm .managerInfor .managerInfor2 p {
-    margin: 18px auto;
+    margin: 5px 0 5px 3px;
 }
 
-#reservationForm .managerInfor .managerInfor2 p label {
+#reservationForm .managerInfor .managerInfor2 label {
     color: #236C3F;
     font-weight: bold;
     padding: 3px;
-    /* background-color: red; */
 }
-
 #reservationForm .h2Box1 h2 {
     font-size: 25px;
     margin-bottom: 15px;
@@ -557,7 +557,6 @@ datalist {
     margin: 50px 0 100px 50px;
     display: flex;
     /* background-color: red; */
-    border-bottom: 1px solid #a7a4a4;
     justify-content: space-between;
 }
 
@@ -575,13 +574,13 @@ datalist {
 }
 
 #reservationForm .choiceBox .time button {
-    padding: 15px;
+    padding: 12px;
     margin: 8px;
     width: 100px;
     background-color: white;
     border: 1px solid #236C3F;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -628,11 +627,14 @@ datalist {
 
 #reservationForm .reservationBox .petKg input {
     margin-left: 150px;
-    margin-right: 10px;
-    width: 300px;
+    margin-right: 30px;
+    width: 200px;
     padding: 10px;
-    border: 1px solid #a7a4a4;
-    border-radius: 10px;
+    border: none;
+    border-bottom: 1px solid #a7a4a4;
+}
+#reservationForm .reservationBox .petKg label{
+    padding-top: 5px;
 }
 
 #reservationForm .reservationBox .character {
@@ -689,7 +691,6 @@ datalist {
 #reservationForm .reservationBox .character .bite p {
     width: 40px;
     margin-top: -14px;
-    font-size: 16px;
 }
 
 #reservationForm .reservationBox .character .bite p:first-child {
@@ -720,7 +721,6 @@ datalist {
     text-align: start;
     resize: none;
     outline: #236C3F;
-    font-size: 16px;
 }
 
 
@@ -740,24 +740,28 @@ datalist {
     border: 1px solid #a7a4a4;
     border-radius: 10px;
 }
-#reservationForm .reservationBox .point button{
+
+#reservationForm .reservationBox .point button {
     width: 80px;
     padding: 10px;
     border: 1px solid #a7a4a4;
     border-radius: 10px;
     margin-left: 5px;
 }
-#reservationForm .reservationBox .point p{
+
+#reservationForm .reservationBox .point p {
     width: 620px;
     font-size: 16px;
     color: #a7a4a4;
     text-align: end;
     padding-top: 5px;
 }
-#reservationForm .reservationBox .cal{
+
+#reservationForm .reservationBox .cal {
     margin-bottom: 50px;
 }
-#reservationForm .reservationBox .cal p{
+
+#reservationForm .reservationBox .cal p {
     margin-top: 20px;
     margin-bottom: 20px;
     width: 620px;
@@ -765,7 +769,8 @@ datalist {
     font-weight: bold;
     /* color: red; */
 }
-#reservationForm .reservationBox .cal button{
+
+#reservationForm .reservationBox .cal button {
     width: 300px;
     padding: 10px;
     border: 1px solid #a7a4a4;
@@ -783,71 +788,79 @@ datalist {
     width: 650px;
     height: 600px;
 }
-#reservationForm .price .expectPrice{
-    text-align: center;
 
-    margin: 30px;
-    font-size: 25px;
-    
+#reservationForm .expectPrice {
+    width: 610px;
+    text-align: center;
+    font-size: 18px;
+    /* border: 1px solid black; */
 }
-#reservationForm .price span{
+
+#reservationForm .price span {
     padding-right: 120px;
 }
-#reservationForm .price label{
+
+#reservationForm .price label {
     margin-right: 10px;
 }
-#reservationForm .price input{
+
+#reservationForm .price input {
     margin-right: 30px;
 }
 
 #reservationForm .price table {
     border: none;
-    font-size: 18px;
     text-align: center;
     border-spacing: 0px;
     margin-top: 30px;
+    font-size: 16px;
 }
 
 #reservationForm .price table td:hover {
     background-color: #236C3F;
     color: white;
     cursor: pointer;
+
 }
 
-#reservationForm .price table th{
+#reservationForm .price table th {
     width: 102px;
     height: 50px;
     font-size: 16px;
 }
 
 
-#reservationForm .price table tr:first-child{
+#reservationForm .price table tr:first-child {
     background-color: #e2e2e2;
 }
 
 
-#reservationForm .price table td,#reservationForm .price table th{
+#reservationForm .price table td,
+#reservationForm .price table th {
     border: 1px solid black;
 
 }
 
-#reservationForm .reservationBox .notice{
-    display: flex;
+#reservationForm .reservationBox .notice #notice {
+    width: 620px;
+    height: 300px;
+    overflow: scroll;
+    border: 1px solid #a7a4a4;
+    font-size: 16px;
+    padding: 20px;
+    margin: 10px 0 20px 0;
 }
-
-#reservationForm .reservationBox .notice #notice{
-    width: 400px;
-    height: 50px;
-    border-radius: 10px;
-    border: 1px solid black;
-}
-
 
 
 #reservationForm .signBox .sign {
-    width: 625px;
-    height: 200px;
+    margin-top: 10px;
 }
+
+#reservationForm .subBtn {
+    text-align: center;
+    margin: 180px 0 100px 0;
+}
+
 
 
 #reservationForm .subBtn button {
