--- a/src/assets/css/mypage/sidebar.css
+++ b/src/assets/css/mypage/sidebar.css
@@ -8,7 +8,7 @@
     /* background-color: forestgreen; */
     position: fixed;
     top: 138px;
-    left: 50px;
+    left: 0;
     z-index: 999;
 }
 
