--- a/src/assets/css/potal/mlogin.css
+++ b/src/assets/css/potal/mlogin.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    transform: scaleY(1.1);
 }
 
 .mlogin-box {
