--- a/src/assets/css/edit/editform.css
+++ b/src/assets/css/edit/editform.css
@@ -1,112 +1,353 @@
-/* 홈페이지 설정 폼 */
+/* 편집 페이지 */
 
-.editformContainer{
-    width: 1000px;
-    /* background-color: darkkhaki; */
+/* 타이틀 */
+.container2{}
+.container2 .eTitle{
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+.container2 .eTitle input:first-child{
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+.container2 .eTitle input:last-child{
+    font-size: 23px;
+}
+
+/* 이미지 슬라이드 */
+.container2 .eImgSlide{}
+.container2 .eImgSlide img{
+    width: 100%;
+}
+
+/* ===================== 중간 내용부분 ===================== */
+
+.eMidContainer{
+    padding: 70px 0;
+    /* background-color: cornflowerblue; */
+    width: 1500px;
     margin: 0 auto;
 }
 
-/* 타이틀 */
-.editformContainer h1{
+/* ============= 미용사진 ============= */
+.eMidContainer .eCutImgContainer{
+    /* background-color: sandybrown; */
+    margin-bottom: 70px;
+}
+.eMidContainer .eCutImgContainer h1{
     margin-bottom: 30px;
+    /* background-color: darkorchid; */
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px ;
+}
+.eMidContainer .eCutImgContainer .eCutSlide{
+    overflow: hidden;
+    width: 1500px;
+    white-space: nowrap ;
+}
+.eMidContainer .eCutImgContainer .eCutSlide img{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    margin-right: 20px;
 }
 
-/* 등록내용 */
-.editformContainer .efInputBox{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 30px;
+/*============= 디자이너 소개 =============*/
+.eMidContainer .eDesignerSlideContainer{
+    /* background-color: forestgreen; */
+    margin-bottom: 70px;
+}
+.eMidContainer .eDesignerSlideContainer h1{
+    margin-bottom: 30px ;
+    /* width: 1700px; */
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
+    background-color: #f2f2f2;
+    padding: 30px 200px;
+    display: flex;
+    justify-content: space-around;
 }
 
-.editformContainer .efInputBox label{
-    font-weight: bold;
-    margin-right: 10px;
-    line-height: 60px;
+/* 디자이너소개 왼쪽 */
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox{
+    padding-top: 30px;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 20px;
+    width: 350px;
+    height: 350px;
 }
-.editformContainer .efInputBox input{
-    font-size: 20px;
-    padding: 5px;
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h2{
+    margin-bottom: 20px;
 }
-/* 메인슬라이드 사진 등록 */
-.editformContainer  .efInputBox .efSlidePhotoBox{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 30px;
-}
-.editformContainer  .efInputBox .efSlidePhotoBox .efSlideAddPhoto{
-    border: 1px dashed #ddd;
-    width: 100px;
-    height: 100px;
-    font-size: 50px;
-    text-align: center;
-    line-height: 85px;
-}
-
-/* 미용사진 등록 */
-.editformContainer  .efInputBox .efPhotoBox{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 30px;
-}
-.editformContainer  .efInputBox .efPhotoBox .efAddPhoto{
-    border: 1px dashed #ddd;
-    width: 100px;
-    height: 100px;
-    font-size: 50px;
-    text-align: center;
-    line-height: 85px;
-}
-
-/* 디자이너 소개 */
-.editformContainer  .efInputBox .efDesignerBox{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 30px;
-}
-.editformContainer  .efInputBox .efDesignerBox button{
-    border: none;
-    background-color: #237140;
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h3{
+    background-color: #222;
     color: #fff;
-    width: 100px;
-    height: 38px;
-    margin-left: 10px;
-    border-radius: 7px;
-    cursor: pointer;
+    border-radius: 10px;
+    padding: 7px 10px;
+    width: 60px;
 }
-.editformContainer  .efInputBox .efDesignerBox button:hover{
-    background-color: #1d5e35;
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox p{
+    margin: 7px;
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
+    /* background-color: #fff;
+    border-radius: 15px;
+    padding: 10px; */
+}
+
+/* 디자이너소개 오른쪽 */
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
+    width: 400px;
+    height: 400px;
+    /* background-color: #ddd; */
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox img{
+    width: 400px;
+    height: 400px;
+    object-fit: contain;
+}
+
+/*============= 가격 + 후기 =============*/
+.eMidContainer .ePriceReviewContainer{
+    display: flex;
+    justify-content: space-between;
+    /* background-color: darkgoldenrod; */
+    /* width: 1700px; */
+    margin: 0 auto 70px;
 }
 /* 가격 */
-.editformContainer  .efInputBox .efPrice{
-    background-color: aqua;
-    height: 500px;
-}
-/* 운영시간 */
-.editformContainer  .efInputBox .efTime .efTimeBox{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 30px;
-}
+.eMidContainer .ePriceReviewContainer .ePriceBox{
+    /* background-color: tomato; */
+    /* margin-right: 30px; */
 
-/* 가게정보 */
-.editformContainer  .efInputBox .efInfo .efInfoBox{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 30px;
 }
-
-.efInputBox button.efBtn{
+.eMidContainer .ePriceReviewContainer .ePriceBox h1{
+    margin-bottom: 30px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table{
+    border-collapse: collapse;
+    width: 700px;
     border: none;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table th{
+    height: 50px;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder{
+    border-left: none;
+    border-right: none;
+    background-color: #f6f6f6;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder2{
+    /* border-left: none; */
+    /* border-right: none; */
+    background-color: #f6f6f6;
+}
+.eMidContainer .ePriceReviewContainer .ePriceBox table td{
+    padding-left: 5px;
+}
+
+/* 후기 */
+.eMidContainer .ePriceReviewContainer .eReviewBox{
+    /* background-color: navy; */
+    width: 700px;
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle h1{
+    /* margin-bottom: 30px; */
+    /* border-bottom: 1px solid #ddd; */
+    /* padding-bottom: 10px; */
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle a{
+    font-weight: bold;
+}
+/* 후기 슬라이드 */
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide{
+    width: 700px;
+    /* background-color: darkorchid; */
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+
+/* 후기 슬라이드 이미지 */
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide img{
+    width: 600px;
+    margin-bottom: 30px;
+    /* margin-left: 50px; */
+}
+/* 후기 슬라이드 내용 */
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox{
+   /* background-color: darkorange; */
+   padding: 20px;
+   border: 1px solid #ddd;
+   border-radius: 20px;
+   width: 600px;
+   /* width: 700px; */
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop{
+    display: flex;
+    align-items: center;
+}
+.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop h2{
+    margin: 0 10px 10px 0;
+ }
+ .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop p{
+    color: #666;
+ }
+
+ /*============= 위치 =============*/
+ .eMidContainer .ePositionContainer{
+    /* background-color: skyblue; */
+    /* width: 1700px; */
+    margin: 0 auto 30px;
+ }
+ .eMidContainer .ePositionContainer h1{
+    /* margin-left: 30px; */
+    margin: 0 auto 30px ;
+    /* width: 1800px; */
+    /* line-height: 50px; */
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox{
+    /* background-color: yellowgreen; */
+    display: flex;
+ }
+ 
+ /* 위치 왼쪽 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft{
+    /* background-color: orangered; */
+    width: 900px;
+    /* padding: 0 50px; */
+ }
+ /* 위치 왼쪽 - 이용시간 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime{
+    display: flex;
+    /* background-color: darkgrey; */
+    margin-bottom: 30px;
+ }
+ /* 이용시간 왼쪽 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
+    /* background-color: darkmagenta; */
+    margin-right: 100px;
+ }
+ /* 이용시간 오른쪽 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
+    /* background-color: lawngreen; */
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
+    display: flex;
+    margin-bottom: 5px;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:first-child{
+    font-weight: bold;
+    width: 120px;
+    /* margin-right: 20px; */
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:nth-child(2){
+    color: #666;
+ }
+ /* 위치 왼쪽 - 오시는길 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
+    display: flex;
+    /* background-color: tan; */
+    margin-bottom: 30px;
+ }
+  /* 오시는길 왼쪽 */
+  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadLeft{
+    /* background-color: darkmagenta; */
+    margin-right: 100px;
+ }
+ /* 오시는길 오른쪽 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight{
+    /* background-color: lawngreen; */
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents{
+  
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p{
+    font-weight: bold;
     font-size: 20px;
-    padding: 20px ;
-    width: 300px;
-    border-radius: 10px;
-    background-color: #237140;
+    color: #666;
+    /* line-height: 40px; */
+    padding-bottom: 10px;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox{}
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox >button{
+    border: none;
+    padding: 5px 10px;
+    width: 150px;
+    height: 50px;
+    font-size: 14px;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .kakaoMapBtn{
+    background-color: #FFE500;
+    margin-right: 10px;
+    cursor: pointer;
+    font-weight: bold;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .naverMapBtn{
+    background-color: #2FAF2D;
     color: #fff;
     cursor: pointer;
-    margin: 50px auto 0;
+    font-weight: bold;
+ }
+ /* 위치 왼쪽 - 미용예약 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv{
+    display: flex;
+    /* background-color: sandybrown; */
+ }
+/* 미용예약 왼쪽 */
+.eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservLeft{
+    /* background-color: darkmagenta; */
+    margin-right: 100px;
+ }
+ /* 미용예약 오른쪽 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight{
+    /* background-color: lawngreen; */
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservTel{
+    font-size: 22px;
+    font-weight: bold;
+    /* line-height: 40px; */
+    padding-bottom: 10px;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn{
+    background-color: #237140;
+    color: #fff;
     display: block;
-}
-.efInputBox button.efBtn:hover{
+    width: 200px;
+    height: 70px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 70px;
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn:hover{
     background-color: #1d5e35;
-}
+ }
+
+ 
+ /* 위치 오른쪽 */
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight{
+    /* background-color: lightcoral; */
+    width: 800px;
+    /* display: flex;
+    justify-content: center; */
+ }
+ .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight >img{
+
+ }
