--- a/src/assets/css/potal/search.css
+++ b/src/assets/css/potal/search.css
@@ -120,20 +120,14 @@
   }
   
   .bottom {
-    margin: 20px 20px 20px 20px;
+    margin: 20px 10px 20px 20px;
     position: relative;
-  }
-  
-  .bottom-bottom {
-    display: flex;
   }
   
   .search-result {
     display: flex;
     flex-wrap: wrap;
-    width: 1000px;
-    justify-content: flex-start;
-    margin: 20px 0 15px 15px;
+    margin: 20px 0 15px 0px;
   }
   
   .search-item {
@@ -141,7 +135,7 @@
   }
   
   .search-item img {
-    width: 470px;
+    width: 250px;
     height: 250px;
     margin-right: 10px;
     object-fit: cover;
@@ -153,34 +147,6 @@
     margin-top: 5px;
     margin-bottom: 10px
   }
-  
-  .popular-search {
-    width: 300px;
-    border: 1px solid #ccc;
-    padding: 15px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    margin-top: 20px;
-    height: 320px;
-  }
-  
-  .popular-search>h2 {
-    text-align: center;
-    margin-bottom: 7px;
-  }
-  
-  .popular-items ul {
-    padding: 0;
-    margin: 5px;
-  }
-  
-  .popular-items li {
-    list-style: none;
-    margin-bottom: 5px;
-    font-size: 14px;
-  }
-  
   
   .search-category {
     display: flex;
@@ -195,10 +161,6 @@
     border: 1px solid #d6d6d6;
   }
   
-  /* .search-table td {
-    border: 1px solid #d6d6d6;
-  } */
-  
   .search-table .search-location {
     background-color: #9bd89d;
   }
@@ -206,4 +168,10 @@
   .result-h2 {
     text-align: left;
     margin: 50px 0 15px 0;
+  }
+
+  .rank-search {
+    display: flex;
+    justify-content: flex-start;
+    width: 1400px;
   }
