--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -94,6 +94,7 @@
     padding-left: 25px;
 }
 
+
 #petAddForm .container .detail label {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -120,12 +121,20 @@
 
 }
 
-#petAddForm .container .detail button:hover {
-    background-color: #236C3F;
-    color: white;
-    border: none;
+
+#petAddForm .container .detail span{
     font-weight: bold;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+#petAddForm .container .detail .size label{
+    margin-right: 10px;
+}
+#petAddForm .container .detail .size input{
+    margin-right: 30px;
+}
+
 
 #petAddForm .container #feature .biteRange {
     display: flex;
@@ -204,7 +213,7 @@ datalist {
     height: 60px;
     border: 1px solid #236C3F;
     border-radius: 5px;
-    background-color: white;
+    background-color: #ffffff;
     color: #236C3F;
     font-weight: bolder;
     font-size: 18px;
