--- a/src/assets/css/potal/mlogin.css
+++ b/src/assets/css/potal/mlogin.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    transform: scaleY(1.1);
+    transform: scale(1.1);
 }
 
 .mlogin-box {
@@ -24,20 +24,24 @@
     align-items: center;
     flex-direction: column;
 }
-
-.login-form {
+.mlogin-box .con-logo{
+    height: 90px;
+    object-fit: contain;
+    margin-bottom: 20px;
+}
+.mlogin-box .login-form {
     margin-top: 20px;
     width: 100%;
 }
 
-.form-group-login {
+.mlogin-box .form-group-login {
     margin-bottom: 10px;
     width: 100%;
     text-align: cen;
     position: relative;
 }
 
-.form-group-login input {
+.mlogin-box .form-group-login input {
     width: calc(100% - 40px);
     padding: 10px;
     border: 1px solid #ccc;
@@ -45,12 +49,12 @@
     display: inline-block;
 }
 
-.password-input input {
+.mlogin-box .password-input input {
     width: 100%; 
     padding-right: 30px; 
 }
 
-.toggle-password {
+.mlogin-box .toggle-password {
     position: absolute;
     right: 30px;
     top: 50%; 
@@ -58,11 +62,11 @@
     cursor: pointer;
 }
 
-.toggle-password i {
+.mlogin-box .toggle-password i {
     color: #999; /* 회색 계열 */
 }
 
-.loginBtn  {
+.mlogin-box .loginBtn  {
     width: calc(100% - 40px);
     padding: 10px;
     background-color: #236C3F;
@@ -75,7 +79,7 @@
     margin-top: 15px;
 }
 
-.signinBtn {
+.mlogin-box .signinBtn {
     width: calc(100% - 40px);
     padding: 10px;
     background-color: white;
@@ -87,7 +91,7 @@
     margin-bottom: 7px;
 }
 
-.login-image-container {
+.mlogin-box  .mlogin-image-container {
     margin-top: 10px;
     width: 100%;
     display: flex;
@@ -96,31 +100,31 @@
 }
 
 /* 이미지 스타일 */
-.login-image-container img {
+.mlogin-image-container img {
     width: 100%;
     max-width: 450px;
     height: 100px;
 }
 
-.login-footer-ul {
+.mlogin-footer-ul {
     list-style: none;
     padding: 0;
     margin: 20px 0 10px 0;
     font-size: 14px;
 }
 
-.login-footer-ul li {
+.mlogin-footer-ul li {
     display: inline;
     margin-right: 10px;
     color: #666;
 }
 
-.login-footer-ul li::after {
+.mlogin-footer-ul li::after {
     content: "|";
     margin-left: 10px;
 }
 
-.login-footer p {
+.mlogin-footer p {
     font-size: 14px;
     color: #666; 
 }
