--- a/src/assets/css/potal/signup.css
+++ b/src/assets/css/potal/signup.css
@@ -30,6 +30,44 @@
     margin-top: 20px;
     width: 100%;
 }
+.form-group.preview-image{
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    position: relative;
+    border-radius: 50%;
+    overflow: hidden;
+}
+/* 미리보기 이미지 */
+#preview-pimage{
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    background: url('@/assets/images/icon_camera.png') no-repeat center;
+    background-size: 50%;
+    margin-bottom: 50px;
+    /* border: none; */
+    border-radius: 50%;
+}
+/* 파일대신 버튼 */
+.pImgAddBtn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer; /* 포인터 커서로 변경하여 클릭 가능한 것처럼 보이게 함 */
+    z-index: 1; /* 이미지 위에 올라오도록 함 */
+    border: 1px solid green;
+}
+/* 파일버튼 */
+.form-group input[type="file"].upload-hidden {
+    border: none;
+    /* width: 330px; */
+    display: none;
+
+}
+
 
 .form-group {
     margin-bottom: 20px;
