--- a/src/assets/css/mypage/review.css
+++ b/src/assets/css/mypage/review.css
@@ -1,3 +1,4 @@
+/* review */
 #reviewBoard {
     width: 1400px;
     margin: 0 auto;
@@ -66,4 +67,16 @@
 
 .reviewBoardContainer .reviewCon03 .context{
     padding: 20px 0 0 30px;
+}
+
+
+
+
+
+/* ************************************************** */
+/* reviewDetail */
+.reviewBoardDetailContainer{
+    /* background-color: blue; */
+    width: 1000px;
+    margin: 0 auto;
 }
