사진 몰라 안할거야 짜증나

--- a/src/assets/css/manager/diary.css
+++ b/src/assets/css/manager/diary.css
@@ -378,4 +378,24 @@
     display: flex;
     transition: transform 0.5s ease-in-out;
 }
+.diary-image-preview {
+    position: relative;
+    display: inline-block;
+}
+
+.diary-image-preview img {
+    width: 100px;
+    height: 100px;
+}
+
+.diary-image-preview button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
 
