--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -13,6 +13,7 @@
 /* ************************* 달력 ************************* */
 .container4 .calendarContainer{
     width: 45%;
+    padding-top: 50px;
     /* background-color: orange; */
 }
 
@@ -53,12 +54,12 @@
 
 /* 시간 선택 */
 .container4 .timeContainer .insertScheduleContainer .selectWorkTimeContainer{
-    height: 450px;
+    height: 500px;
     /* background-color: orange; */
 }
 .container4 .timeContainer .insertScheduleContainer .selectWorkTime{
     /* background-color: orangered; */
-    padding: 13px 0;
+    padding: 12px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -71,12 +72,6 @@
     background-color: #ddd;
     border-radius: 30px;
     margin-right: 20px;
-}
-.selectedDays{
-    cursor: pointer;
-}
-.selectWorkDay.selected {
-    background-color: yellow; /* 원하는 색상으로 변경 */
 }
 
 
