ㅇㅅ 동일한 시간추가 로직

--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -137,7 +137,7 @@
 .container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck {
     display: flex;
 }
-.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck p {
+.container4 .timeContainer .insertScheduleContainer .selectWorkDate .weekAllDayCheck >label {
     padding-right: 10px;
 }
 
